# Free-Energy-Pipeline

./: README.md
docking_pipeline/: pyproject.toml
docking_pipeline/notebooks/.ipynb_checkpoints/: docking_analysis_refactored-checkpoint.ipynb
docking_pipeline/src/docking_pipeline/: __init__.py  config.py  contacts_protein.py  enthalpy.py  entropy.py  exceptions.py  free_energy.py  io_tables.py  merge_scores.py  pipeline.py  prodigy_scoring.py  validation.py
