[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docking-pipeline"
version = "0.1.0"
description = "Modular docking analysis pipeline for residue-level enthalpy, entropy, and free energy"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "MDAnalysis>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
